fix extra letter-spacing on safari

--- a/login.css
+++ b/login.css
@@ -46,7 +46,7 @@ section {
 h2 {
     font-family: "Permanent Marker";
     font-size: 2.25em;
-    font-weight: 600;
+    font-weight: 700;
     letter-spacing: 3px;
     color: var(--primary);
     text-align: center;
